2004-03-16  Gareth Owen  <gowen72@yahoo.com>

	* configure.in: Added en_GB (British) to ALL_LINGUAS

2004-03-04  Guntupalli Karunakar  <karunakar@freedomink.org>

        * configure.in: Added "pa" (Punjabi) to ALL_LINGUAS.

2004-03-01 Dinesh Nadarajah <dinesh_list@sbcglobal.net>

        * ta.po: Started Tamil Translation

2004-03-02  Glynn Foster  <glynn.foster@sun.com>

	* gnome-vfs.applications: Remove the -p option from
	gnome-sound-recorder since it's not supported anymore.

2004-02-29  Paisa Seeluangsawat  <paisa@users.sf.net>

	* configure.in: Added "th" (Thai) to ALL_LINGUAS.

2004-02-25  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added sr@ije to ALL_LINGUAS.

2004-02-06  Robert Sedak  <robert.sedak@sk.htnet.hr>

        * configure.in: Added "hr" (Croatian) to ALL_LINGUAS.

2004-02-05  Alexander Larsson  <alexl@redhat.com>

	* gnome-vfs.keys.in:
	Use nautilus-media oafid, not old music view one

2004-01-06  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic: fix detection of Mr Project/Planner files
	(Closes: #130662)

2004-01-05  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in: add an icon for the Matroska videos

2003-12-30  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in: change the label of Matroska video file to
	Matroska video (thanks Menthos) (Closes: #130178)

2003-12-27  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic:
	* gnome-vfs.keys.in:
	* gnome-vfs.mime: add Matroska support as application/x-matroska

2003-12-26  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in:
	* gnome-vfs.mime: added Verilog source files as text/x-verilog-src
	(Closes: #130021)

2003-12-22  Bastien Nocera  <hadess@hadess.net>

	* configure.in: update to 2.4.1

2003-12-22  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in: add more aliases for .zip files (Closes: #129510)

2003-12-22  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic:
	* gnome-vfs.applications:
	* gnome-vfs.keys.in: