@@ -383,11 +383,11 @@ application/x-wais-source
 application/x-xbase
 	ext: dbf
 
+application/x-xbel
+	ext: xbel
+
 application/x-zoo
 	ext: zoo
-
-application/xbel
-	ext: xbel
 
 application/zip
 	ext: zip
