@@ -1,3 +1,12 @@
+2004-03-22  Marco Pesenti Gritti  <marco@gnome.org>
+
+	* gnome-vfs-mime-magic:
+	* gnome-vfs.keys.in:
+	* gnome-vfs.mime:
+
+	XBEL type is now application/x-xbel, like in
+	shared-mime-info
+
 2004-03-16  Gareth Owen  <gowen72@yahoo.com>
 
 	* configure.in: Added en_GB (British) to ALL_LINGUAS
